More ignored files added, some comments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 # assets #
 *.bsp
 easter/
-.vscode/
 sky_data/
+
+#env
+.env/
+
+#workspace settings
+.vscode/
+.vs/
 
 # OS files #
 ############
